# factorio-screenshot-grid

./: .gitignore  README.MD  control.lua  info.json  pyproject.toml  stitch.py
.devcontainer/: devcontainer.json  docker-compose.yml  factorio-screenshot-grid.code-workspace  setup.sh
.github/: copilot-instructions.md
